<resources>
    <string name="app_name">Coffee</string>
    <string name="masary_cafe">Masary Cafe</string>
    <string name="fast_and_delicious_food">fast and delicious food</string>
    <string name="forget_password">forget password ?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="comment">Comment</string>
    <string name="rate_our_service">Rate our service</string>
    <string name="speed_of_service">Speed of service</string>
    <string name="staff_friendliness">Staff friendliness</string>
    <string name="submit">submit</string>
    <string name="Could_your_experience_have_been_better">Could your experience have been better ?</string>
    <string name="How_did_you_hear_about_us">How did you hear about us ?</string>
    <string name="how_often_have_you_visited_us">how often have you visited us ?</string>
    <string name="what_did_you_dislike_about_us">what did you dislike about us ?</string>
    <string name="what_did_you_like_about_us">what did you like about us ?</string>
    <string name="Any_comments_on_above_answers">Any comments on above answers ?</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="srch">search</string>
</resources>
