<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mahmoudshaeer.coffee.Pages.First_Page"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/egypt"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masary_cafe"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="23sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_and_delicious_food"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/btn_feedBack"
            android:background="#fffdfd"
            android:text="feedback"
            android:onClick="GoPageFeedBack"
            android:layout_marginRight="17dp"
            android:layout_marginEnd="17dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_iamHungry"
            android:layout_toStartOf="@+id/btn_iamHungry" />
        <Button
            android:layout_width="wrap_content"
            android:text="i'm Hungry"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#e9ffb923"
            android:layout_height="wrap_content"
            android:layout_marginRight="78dp"
            android:layout_marginEnd="78dp"
            android:id="@+id/btn_iamHungry"
            android:onClick="GoPageHome"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textAlignment="center"/>
</LinearLayout>
</ScrollView>
